# Agents_Udemy

./: README.md  pyproject.toml  test.py
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  4_lab4_questions_gemini_google_search_editor.ipynb
2_openai/community_contributions/: 2_lab2_with_Gemini_and_Gmail.ipynb  2_lab2_with_pushover_notifications.ipynb  2_lab2_with_resend_email.ipynb
2_openai/deep_research/: email_agent.py  planner_agent.py  research_manager.py  search_agent.py  writer_agent.py
3_crew/coder/: pi_approximation.txt  series_calculation.txt
3_crew/danang_travel/: README.md  pyproject.toml  report.md
3_crew/danang_travel/output/: popular_destinations.json
3_crew/danang_travel/src/danang_travel/: crew.py  main.py
3_crew/danang_travel/src/danang_travel/config/: agents.yaml  tasks.yaml
3_crew/danang_travel/src/danang_travel/tools/: push_tool.py
3_crew/stock_picker/: pyproject.toml
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal  sidekick.py
4_langgraph/sandbox/: dinner.md  (+1 more)
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent1.py  agent2.py  agent3.py  agent4.py  agent5.py  creator.py  idea1.md  idea2.md  idea3.md  idea4.md  idea5.md  test.py  tickets.db  world.py
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  traders.py  trading_floor.py
(+20 files in other folders)
