[project]
name = "danang_travel"
version = "0.1.0"
description = "Danang_travel using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
danang_travel = "danang_travel.main:run"
run_crew = "danang_travel.main:run"
train = "danang_travel.main:train"
replay = "danang_travel.main:replay"
test = "danang_travel.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
